Refactor documentation and code to standardize terminology from "MongoDB 實例" to "MongoDB instance" across multiple files. Updated user interface documentation for clarity and consistency. Enhanced error logging messages and comments in the analysis service to reflect the new terminology. Adjusted default server URL in edge client configuration for local development. Improved overall readability and maintainability of the codebase.

--- a/docs/使用教學.md
+++ b/docs/使用教學.md
@@ -3,6 +3,7 @@
 本指南以繁體中文說明如何登入並操作 State Management System 的 Web 介面，協助管理者快速掌握常見任務。
 
 ## 1. 登入與登出
+
 1. 造訪系統網址（預設為 `http://localhost:8000`）。
 2. 於登入頁輸入「使用者名稱」與「密碼」，必要時勾選「記住我」。
 3. 登入成功會自動跳轉至儀表板；右上角選單可進入個人資料、修改密碼或登出。
@@ -10,51 +11,60 @@
 > 若出現帳戶被停用或密碼錯誤訊息，請洽系統管理員協助。
 
 ## 2. 儀表板導覽
-- **統計卡片**：顯示分析設定、路由規則、MongoDB 實例與在線節點的啟用/總數。
+
+- **統計卡片**：顯示分析設定、路由規則、MongoDB instance與在線節點的啟用/總數。
 - **最近更新的設定**：快速查看最新調整的分析設定與其啟用狀態。
 - **在線節點**：列出目前可用節點及任務負載，可進一步進入節點詳情。
 
 ## 3. 側邊欄功能一覽
+
 1. **分析設定**：建立/編輯分析方法所需的參數與模型檔案。
 2. **路由規則**：以條件決定要使用哪一個分析設定，可定義多個動作。
-3. **MongoDB 實例**：管理資料庫連線、測試連線狀態並控制啟用與否。
+3. **MongoDB instance**：管理資料庫連線、測試連線狀態並控制啟用與否。
 4. **節點監控**：檢視節點在線狀態、心跳時間與能力標籤，並可註銷節點。
 5. **使用者管理**（僅管理員）：建立/編輯/停用使用者，或重設其密碼。
 
 ## 4. 常見操作流程
+
 ### 建立分析設定
+
 1. 進入「分析設定」>「建立新設定」。
 2. 填寫分析方法 ID、設定名稱與描述。
 3. 覆寫 JSON 參數或上傳模型檔案（於詳情頁操作）。
 4. 儲存後可於列表中啟用/停用。
 
-### 新增 MongoDB 實例
-1. 前往「MongoDB 實例」>「新增實例」。
+### 新增 MongoDB instance
+
+1. 前往「MongoDB instance」>「新增instance」。
 2. 輸入主機、連接埠、資料庫與帳密等欄位。
 3. 儲存後於列表按下插頭圖示即可測試連線。
 
 ### 調整路由規則
+
 1. 至「路由規則」>「建立規則」。
 2. 以 JSON 定義 `conditions` 與 `actions`（可根據 `machine_type`、`location` 等欄位判斷）。
 3. 設定優先級，數值越大表示優先匹配。
 4. 儲存後可透過「路由規則測試」API 或後端測試工具驗證匹配結果。
 
 ### 使用者管理
+
 - **建立/編輯使用者**：填寫電子郵件、角色（管理員/一般使用者）與啟用狀態。
 - **重設密碼**：在使用者列表點擊鑰匙圖示即可產生臨時密碼。
 - **個人修改密碼**：登入者可從右上角選單進入「修改密碼」頁面。
 
 ## 5. 系統訊息與提醒
+
 - 所有成功、警告與錯誤訊息均以繁體中文顯示在頁面頂端，便於快速了解狀態。
 - 若送出表單時未通過驗證，欄位下方會顯示對應的錯誤訊息。
-- 節點、實例與設定的狀態切換皆會透過即時提醒或對話框確認，避免誤操作。
+- 節點、instance與設定的狀態切換皆會透過即時提醒或對話框確認，避免誤操作。
 
 ## 6. 疑難排解
-| 情境 | 建議措施 |
-| --- | --- |
-| 無法登入 | 確認帳戶是否啟用、密碼是否正確，必要時請管理員重設密碼。 |
-| 連線測試失敗 | 檢查 MongoDB 服務是否可達、帳密與 `auth_source` 是否正確。 |
-| JSON 驗證錯誤 | 使用線上 JSON 檢查工具確保語法正確，並留意引號與逗號。 |
-| 節點長時間離線 | 於節點詳情檢視最後心跳時間，確認節點服務是否仍在運行。 |
+
+| 情境           | 建議措施                                                     |
+| -------------- | ------------------------------------------------------------ |
+| 無法登入       | 確認帳戶是否啟用、密碼是否正確，必要時請管理員重設密碼。     |
+| 連線測試失敗   | 檢查 MongoDB 服務是否可達、帳密與 `auth_source` 是否正確。 |
+| JSON 驗證錯誤  | 使用線上 JSON 檢查工具確保語法正確，並留意引號與逗號。       |
+| 節點長時間離線 | 於節點詳情檢視最後心跳時間，確認節點服務是否仍在運行。       |
 
 如需更多協助，請參考 `WEB_UI_README.md` 或洽系統維運人員。
